# learning_OpenGL

./: README.md
learn_opengl/: CMakeLists.txt
learn_opengl/libs/glad_lib/: CMakeLists.txt
learn_opengl/libs/glad_lib/include/glad/: glad.h
learn_opengl/libs/glad_lib/src/: glad.c
learn_opengl/libs/shader_wrapper/: CMakeLists.txt  shader_wrapper.cpp  shader_wrapper.hpp
learn_opengl/src/10_two_textures/: main.cpp
learn_opengl/src/11_rotate_texture/: main.cpp
learn_opengl/src/12_coordinate_systems/: main.cpp
learn_opengl/src/13_cube/: main.cpp
learn_opengl/src/14_camera_and_view_space/: main.cpp  shader.gfs
learn_opengl/src/1_triangle/: main.cpp
learn_opengl/src/2_rectangle/: main.cpp
learn_opengl/src/3_task__two_triangles/: main.cpp
learn_opengl/src/4_task__two_triangles_up/: main.cpp
learn_opengl/src/5_task__two_triangles_and_two_shaders/: main.cpp
learn_opengl/src/6_task__invert_triangle/: main.cpp
learn_opengl/src/7_task__moving_triangle/: main.cpp
learn_opengl/src/8_task__black_triangle/: main.cpp
learn_opengl/src/9_texture/: main.cpp
